frontend/src/components/PostDisplayWrap/PostDisplayWrap.css
.sub-title {
    font-size: 1.5rem;
    font-weight: 500;
    margin-bottom: 1rem;
    margin-left: 1rem;
    color: #333;
}
.post-title {
    display: flex;
    /* margin-left: .8rem; */
    font-size: .9rem;
    font-family: "Orbitron", sans-serif;
    font-optical-sizing: auto;
    font-weight: 450;
    color: #333;
}
.post-price {
  display: flex;
  /* margin-left: .8rem; */
  font-size: .9rem;
  font-family: "Orbitron", sans-serif;
  font-optical-sizing: auto;
  font-weight: 550;
  color: #333;
}


.item-heart-price {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 45px;
    padding: 10px;
    border-bottom: 0.1px solid rgba(0, 0, 0, 0.1);
}
.carousel-track {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
    margin: 0;
    transition: transform 0.3s ease-in-out;
  }

.carousel-item {
    width: 240px;
    /* min-height: 20em; */
    /* aspect-ratio: 1/1; */
    padding-right: 20px;
    /* text-align: center; */
    /* margin-right: 10px; */
    /* overflow: hidden; */
    }
.carousel-item img {
    height: 16em;
    aspect-ratio: 7 / 8;
    object-fit: cover;
}

  .carousel-container {
    flex: 1;
    /* justify-content: center; */
    padding: 0;
    position: relative;
    
    width: 90vw;
    max-width: 1100px;
    margin: 5rem auto 0 auto;
    box-sizing: border-box;
  }
  .carousel-items-container {
    display: flex;   
    /* justify-content: center; */
}

